# learn-opengl

./: .clang-format  .gitignore  CMakeLists.txt  Readme.MD  run.sh
.cache/clangd/index/: Camera.cpp.A550B71716B72DD0.idx  Camera.h.3901DC30D414B103.idx  GL.cpp.1B75F9D4293705A9.idx  GL.h.E982930B4F3AA902.idx  Main.cpp.59C22FBE8613B4D9.idx  Player.cpp.F3A1A70289DFB0EF.idx  Player.h.5F3576E7C7EDE854.idx  Shader.cpp.AEBB9A5F0949BC44.idx  Shader.h.20D150458D289490.idx  Stb.cpp.A961F7976A5F1DA3.idx  Terrain.cpp.5F3566F6168768B5.idx  Terrain.h.9165AAC0BFA4F9CA.idx  Texture.cpp.1590B2E9AB81EABA.idx  Texture.h.8AA363DBA13C0619.idx  _fixes.hpp.4B0852479264C3D8.idx  _vectorize.hpp.55EF63D14D98DB77.idx  common.h.8CFDE4BC3C26895A.idx  common.hpp.BE2BCDA118C12D4A.idx  constants.hpp.FAF4BEE52485A0AD.idx  constants.inl.B9E6BDCBCF800D4A.idx  context.c.84683EEFD060A06C.idx  dual_quaternion.hpp.C8F8034594CBD93F.idx  dual_quaternion.inl.EECE3A392D8AA0FB.idx  egl_context.c.734299300B0352CB.idx  exponential.h.C3DD093DF6E3B370.idx  exponential.hpp.E8615C33D0636B2E.idx  fractional-scale-v1-client-protocol-code.h.36C663CA67995C85.idx  fractional-scale-v1-client-protocol.h.E20D83EC1D01A0E5.idx  func_common.hpp.911CC499B9B16ED7.idx  func_common.inl.D721FCF7A3B10940.idx  func_common_simd.inl.DC584DB22C926A77.idx  (+154 more)
res/shaders/: fragment.frag  vertex.vert
src/: Main.cpp  main.cpp
src/Core/: Camera.cpp  Camera.h  GL.cpp  GL.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Terrain.h  Texture.cpp  Texture.h  camera.cpp  camera.hpp  gl.cpp  player.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
(+1 files in other folders)
